# tech-test-infra

./: .gitignore  .gitnore  README.md
ansible/: Dockerfile  hosts  playbook.yml  vars.yml
assets/: vm.xml
backend/: .env  Dockerfile  docker-compose.debug.yml  pyproject.toml
backend/clock/: clock.py
frontend/: index.html
vm_config/: vm.xml
